feat: Review layer 4 Rust/Java/Python study plans against books_md
Squashed commits:
- feat: Review layer 4 Rust/Java/Python study plans against books_md
- fix: revert .gitignore workaround; verify books_md at ~/git/books-study/books_md
- fix: update structured concurrency to JEP 505/525/506 and Joiner-based StructuredTaskScope API
- fix: note JEP 525 Joiner renames and List<T> return for JDK 26
- fix: replace throwIfFailed cell and add Subtask import in JDK 25 snippet